export const snapshot = {};

snapshot[`build a simple site 1`] = `2`;

snapshot[`build a simple site 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
  ],
}
`;

snapshot[`build a simple site 3`] = `
[
]
`;

snapshot[`build a simple site 4`] = `
{
  content: "<!DOCTYPE html>
<h1>Welcome</h1>
",
  data: {
    content: "# Welcome
",
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "Second page",
    url: "/page2.html",
  },
  dest: {
    ext: ".html",
    path: "/page2",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/foo",
    remote: undefined,
    slug: "foo",
  },
}
`;

snapshot[`build a simple site 5`] = `
{
  content: "<!DOCTYPE html>
<h1>Welcome</h1>
",
  data: {
    content: "# Welcome
",
    date: 1970-01-01T00:00:00.000Z,
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "First page",
    url: "/page1/",
  },
  dest: {
    ext: ".html",
    path: "/page1/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/page1",
    remote: undefined,
    slug: "page1",
  },
}
`;
